syntax = "proto3";
package xpla.volunteer.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/api/annotations.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/staking/v1beta1/staking.proto";

option go_package = "github.com/xpladev/xpla/x/volunteer/types";

message RegisterVolunteerValidatorProposal {
    option (gogoproto.equal)            = false;
    option (gogoproto.goproto_getters)  = false;
    option (gogoproto.goproto_stringer) = false;

    string title = 1;
    string description = 2;
    cosmos.staking.v1beta1.Description     validator_description         = 3 [(gogoproto.nullable) = false];
    string                   delegator_address = 4 [(gogoproto.moretags) = "yaml:\"delegator_address\""];
    string                   validator_address = 5 [(gogoproto.moretags) = "yaml:\"validator_address\""];
    google.protobuf.Any      pubkey            = 6 [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey"];
    cosmos.base.v1beta1.Coin amount            = 7 [(gogoproto.nullable) = false];
}

message RegisterVolunteerValidatorProposalWithDeposit {
    option (gogoproto.equal)            = false;
    option (gogoproto.goproto_getters)  = false;
    option (gogoproto.goproto_stringer) = true;

    string title = 1;
    string description = 2;
    cosmos.staking.v1beta1.Description     validator_description         = 3 [(gogoproto.nullable) = false];
    string                   delegator_address = 4 [(gogoproto.moretags) = "yaml:\"delegator_address\""];
    string                   validator_address = 5 [(gogoproto.moretags) = "yaml:\"validator_address\""];
    google.protobuf.Any      pubkey            = 6 [(cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey"];
    cosmos.base.v1beta1.Coin amount            = 7 [(gogoproto.nullable) = false];
    string deposit = 8;
}

message UnregisterVolunteerValidatorProposal {
    option (gogoproto.equal)            = false;
    option (gogoproto.goproto_getters)  = false;
    option (gogoproto.goproto_stringer) = false;

    string title = 1;
    string description = 2;
    string validator_address = 3;
}

message UnregisterVolunteerValidatorProposalWithDeposit {
    option (gogoproto.equal)            = false;
    option (gogoproto.goproto_getters)  = false;
    option (gogoproto.goproto_stringer) = true;

    string title = 1;
    string description = 2;
    string validator_address = 3;
    string deposit = 4;
}